--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta name="google-site-verification" content="K6EKRRUpnP0pPjx-RuDeqUs2GjuBa6R4DrjBbet_vts" />
+    <meta name="yandex-verification" content="bf5b4add21751588" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
